changing remove method